@@ -1,4 +1,4 @@
-package ch.jtaf.security;
+package ch.jtaf.service;
 
 import org.jooq.DSLContext;
 import org.springframework.context.annotation.Primary;
@@ -9,8 +9,7 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.stream.Collectors;
-
+import static ch.jtaf.db.tables.SecurityGroup.SECURITY_GROUP;
 import static ch.jtaf.db.tables.SecurityUser.SECURITY_USER;
 import static ch.jtaf.db.tables.UserGroup.USER_GROUP;
 
@@ -39,8 +38,8 @@ public class UserDetailsServiceImpl implements UserDetailsService {
 
             return new User(securityUserRecord.getEmail(), securityUserRecord.getSecret(),
                 groups.stream()
-                    .map(group -> new SimpleGrantedAuthority("ROLE_" + group))
-                    .collect(Collectors.toList()));
+                    .map(group -> new SimpleGrantedAuthority("ROLE_" + group.getValue(SECURITY_GROUP.NAME)))
+                    .toList());
         } else {
             throw new UsernameNotFoundException(username);
         }
